--- a/WebApp/Areas/Admin/Views/Shared/_Layouts.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layouts.cshtml
@@ -8,7 +8,9 @@
     <meta name="author" content="">
     <title>MassageVua</title>
     <!-- Bootstrap Core CSS -->
+
     <link href="/assets/admin/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
     @*<link href="/assets/client/css/font-awesome.min.css" rel="stylesheet" />*@
     <!-- MetisMenu CSS -->
     <link href="/assets/admin/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
@@ -33,7 +35,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">@RenderSection("header", required: true)</h1>
+                        <h1 class="page-header">@RenderSection("header", required: false)</h1>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
