--- a/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -255,7 +255,7 @@
                     <a href="/Admin/Home/Index"><i class="fa fa-dashboard fa-fw"></i> Trang chủ</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-user fa-fw"></i> Hệ thống<span class="fa arrow"></span></a>
+                    <a href="#"><i class="glyphicon glyphicon-list-alt"></i> Hệ thống<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
                             <a href="/Admin/DailyList/Index">Bảng kê</a>
@@ -263,6 +263,18 @@
                         <li>
                             <a href="/Admin/DailyList/TaxiIndex">Thông tin Grab-Taxi</a>
                         </li>
+                        <li>
+                            <a href="/Admin/RevenueExpenditure/Index">Thu - Chi</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/DailyList/CodeIndex"><i class="glyphicon glyphicon-qrcode"></i> Danh sách Code</a>
+                        </li>
+                    </ul>
+                    <!-- /.nav-second-level -->
+                </li>
+                <li>
+                    <a href="#"><i class="glyphicon glyphicon-user"></i> Quản lý nhân viên<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
                         <li>
                             <a href="/Admin/Employee/Index">Nhân viên</a>
                         </li>
@@ -273,31 +285,16 @@
                             <a href="/Admin/ViolatorKTV/Index">Chấm công KTV</a>
                         </li>
                         <li>
-                            <a href="/Admin/RevenueExpenditure/Index">Thu - Chi</a>
-                        </li>
-                        <li>
                             <a href="/Admin/DayOff/Index">Xin nghỉ phép</a>
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-comment fa-fw"></i> Tin tức<span class="fa arrow"></span></a>
+                    <a href="#"><i class="fa fa-bell fa-fw"></i> Khách hàng<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a href="/Admin/Category/Index">Danh mục</a>
-                        </li>
-                        <li>
-                            <a href="/Admin/Content/Index">Tin tức</a>
-                        </li>
-                    </ul>
-                    <!-- /.nav-second-level -->
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-bell fa-fw"></i> Sản phẩm<span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level">
-                        <li>
-                            <a href="/Admin/ProductCategory/Index">Danh mục</a>
+                            <a href="/Admin/ProductCategory/Index">Khách hàng</a>
                         </li>
                         <li>
                             <a href="/Admin/Product/Index">Sản phẩm</a>
