--- a/WebApp/Areas/Admin/Views/DailyList/CodeIndex.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/CodeIndex.cshtml
@@ -1,12 +1,12 @@
-﻿@model PagedList.IPagedList<Model.EF.DayOff>
+﻿@model PagedList.IPagedList<Model.EF.Voucher>
 @using PagedList.Mvc;
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "CodeIndex";
     Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
 
 @section header{
-    Danh sách xin nghỉ
+    Danh sách Code
 }
 
 <div class="row">
@@ -15,13 +15,14 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                Danh sách xin nghỉ
+                Danh sách Code
             </div>
 
             <!-- /.panel-heading -->
             <div class="panel-body">
-                @using (Html.BeginForm("Index", "DayOff", FormMethod.Get))
+                @using (Html.BeginForm("CodeIndex", "DailyList", FormMethod.Get))
                 {
+
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <div class="col-md-4">
@@ -29,20 +30,22 @@
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/DayOff/Create">Thêm mới</a>
+                                <a class="btn btn-primary" href="/Admin/DailyList/CodeCreate">Thêm mới</a>
                             </div>
                         </div>
                     </div>
                 }
-
+                <hr />
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Ngày</th>
-                                <td>Mã nhân viên</td>
-                                <td>Lý do</td>
-                                <td>Trạng thái</td>
+                                <th>ID</th>
+                                <th>Code</th>
+                                <td>Giảm giá</td>
+                                <td>Giảm Tối đa</td>
+                                <td>Tình trạng</td>
+                                <td>Ngày hết hạn</td>
                                 <td>Tạo bởi</td>
                             </tr>
                         </thead>
@@ -50,15 +53,18 @@
                             @foreach (var item in Model)
                             {
                             <tr id="row_@item.ID">
-                                <th>@(string.Format("{0:dd/MM/yyyy}", item.Date))</th>
-                                <td>@item.Employee.Code</td>
-                                <td>@item.Description</td>
-                                <td>@Html.Raw(item.Status ? "<strong style=\"color:Green;\">Đã xác nhận</strong>" : "<strong style=\"color:Tomato;\">Chờ xác nhận</strong>")</td>
+                                <th>#@item.ID</th>
+                                <td>@item.Code</td>
+                                <td>@item.DiscountPercent%</td>
+                                <td>@item.Max</td>
+                                <td>@Html.Raw(item.Status ? "<strong style=\"color:Green;\">Chưa sử dụng</strong>" : "<strong style=\"color:Tomato;\">Đã sử dụng</strong>")</td>
+                                <td>@item.ExpirationDate</td>
                                 <td>@item.CreatedBy</td>
+
                                 <td>
-                                    <a href="/Admin/DayOff/Edit/@item.ID">Sửa</a>
+                                    <a href="/Admin/DailyList/CodeEdit/@item.ID">Sửa</a>
                                     |
-                                    @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
+                                    @Ajax.ActionLink("Xoá", "CodeDelete", new { @id = item.ID }, new AjaxOptions
                                {
                                    Confirm = "Bạn có muốn xoá bản ghi này?",
                                    OnComplete = "$('#row_" + @item.ID + "').remove()",
@@ -71,7 +77,7 @@
 
                         </tbody>
                     </table>
-                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = @ViewBag.SearchString }))
+                    @Html.PagedListPager(Model, page => Url.Action("CodeIndex", new { page, @searchString = @ViewBag.SearchString }))
                 </div>
                 <!-- /.table-responsive -->
             </div>
@@ -79,4 +85,4 @@
         </div>
     </div>
 </div>
-<p>
+
