--- a/WebApp/Areas/Admin/Views/DayOff/Edit.cshtml
+++ b/WebApp/Areas/Admin/Views/DayOff/Edit.cshtml
@@ -9,6 +9,26 @@
     Cập nhật xin nghỉ
 }
 
+@section JsFooter{
+    <script type="text/javascript">
+
+        $(function () {
+
+            $('#Employee_ID').chosen({ width: $('.panel-collapse.collapse.in select').eq(0).width() + 'px' });
+
+        });
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("form").bind("keypress", function (e) {
+                if (e.keyCode == 13) {
+                    return false;
+                }
+            });
+        });
+    </script>
+}
+
 @using (Html.BeginForm("Edit", "DayOff", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
@@ -19,6 +39,8 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
 
+
+
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -28,10 +50,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Employee.Code, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Employee_ID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Employee.Code, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Employee.Code, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.Employee_ID, null, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Employee_ID, "", new { @class = "text-danger" })
             </div>
         </div>
 
