--- a/WebApp/Areas/Admin/Views/Employee/Create.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Create.cshtml
@@ -35,6 +35,15 @@
             customConfig: '/assets/admin/js/plugins/ckeditor/config.js',
         });
     </script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("form").bind("keypress", function (e) {
+                if (e.keyCode == 13) {
+                    return false;
+                }
+            });
+        });
+    </script>
 }
 
 @using (Html.BeginForm("Create", "Employee", FormMethod.Post))
