--- a/WebApp/Areas/Admin/Views/Employee/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Index.cshtml
@@ -12,10 +12,9 @@
         $("#txtsearch").on("keyup", function () {
             var txtenter = $(this).val();
             $("table tr").each(function (results) {
-                if (results!==0) {
+                if (results !== 0) {
                     var id = $(this).find("td:nth-child(3)").text();//Vị trí của <td>từ 1 đếm xuống
-                    if (id.indexOf(txtenter) !== 0 && id.toLowerCase().indexOf(txtenter.toLowerCase()) < 0)
-                    {
+                    if (id.indexOf(txtenter) !== 0 && id.toLowerCase().indexOf(txtenter.toLowerCase()) < 0) {
                         $(this).hide();
                     }
                     else {
@@ -42,11 +41,11 @@
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <div class="col-md-4">
-                                <input type="text" id="txtsearch" placeholder="Nhập vào Tên NV" class="form-control" />
-                                @*<input type="text" id="txtsearch" value="@ViewBag.SearchString" class="form-control" name="searchString" />*@
+                                @*<input type="text" id="txtsearch" placeholder="Nhập vào Tên NV" class="form-control" />*@
+                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào Mã NV hoặc Tên NV" />
                             </div>
                             <div class="col-md-4">
-                                @*<button type="submit" class="btn btn-success">Tìm kiếm</button>*@
+                                <button type="submit" class="btn btn-success">Tìm kiếm</button>
                                 <a class="btn btn-primary" href="/Admin/Employee/Create">Thêm mới</a>
                             </div>
                         </div>
@@ -72,30 +71,30 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                                <tr id="row_@item.ID">
-                                    <td>@item.Code</td>
-                                    <td>@item.Department.Name</td>
-                                    <td>@item.Name</td>
-                                    <td>@item.Username</td>
-                                    <td><img src="@item.Image" width="100px" /></td>
-                                    <td>@item.Phone</td>
-                                    <td>@item.Birthday</td>
-                                    <td>@item.TimeStart</td>
-                                    <td>@item.TimeOut</td>
-                                    <td>@item.DayOffs.Where(c => c.Employee_ID == item.ID).ToList().Count()</td>
-                                    @*<td>@item.NumberOfDayOff</td>*@
-                                    <td><a href="#" class="btn-active" data-id="@item.ID">@Html.Raw(item.StatusAccount ? "<strong>Kích hoạt</strong>" : "Khoá")</a></td>
-                                    <td>
-                                        <a href="/Admin/Employee/Edit/@item.ID">Sửa</a>
-                                        |
-                                        @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
-                                   {
-                                       Confirm = "Bạn có muốn xoá bản ghi này?",
-                                       OnComplete = "$('#row_" + @item.ID + "').remove()",
-                                       HttpMethod = "Delete"
-                                   })
-                                    </td>
-                                </tr>
+                            <tr id="row_@item.ID">
+                                <td>@item.Code</td>
+                                <td>@item.Department.Name</td>
+                                <td>@item.Name</td>
+                                <td>@item.Username</td>
+                                <td><img src="@item.Image" width="100px" /></td>
+                                <td>@item.Phone</td>
+                                <td>@(string.Format("{0:dd/MM/yyyy}", item.Birthday))</td>
+                                <td>@item.TimeStart</td>
+                                <td>@item.TimeOut</td>
+                                <td>@item.DayOffs.Where(c => c.Employee_ID == item.ID).ToList().Count()</td>
+                                @*<td>@item.NumberOfDayOff</td>*@
+                                <td><a href="#" class="btn-active" data-id="@item.ID">@Html.Raw(item.StatusAccount ? "<strong>Kích hoạt</strong>" : "Khoá")</a></td>
+                                <td>
+                                    <a href="/Admin/Employee/Edit/@item.ID">Sửa</a>
+                                    |
+                                    @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
+                               {
+                                   Confirm = "Bạn có muốn xoá bản ghi này?",
+                                   OnComplete = "$('#row_" + @item.ID + "').remove()",
+                                   HttpMethod = "Delete"
+                               })
+                                </td>
+                            </tr>
                             }
 
 
