--- a/WebApp/Areas/Admin/Views/RevenueExpenditure/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/RevenueExpenditure/Index.cshtml
@@ -39,7 +39,7 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <td>STT</td>
+                                <th>ID</th>
                                 <td>Ngày</td>
                                 <th>Loại</th>
                                 <td>Nội dung</td>
@@ -51,11 +51,11 @@
                             @foreach (var item in Model)
                             {
                                 <tr id="row_@item.ID">
-                                    <td>@item.ID</td>
-                                    <td>@item.Date</td>
+                                    <th>#@item.ID</th>
+                                    <td>@(string.Format("{0:dd/MM/yyyy}", item.Date))</td>
                                     <td>@item.ReExType.Type</td>
                                     <td>@item.Contents</td>
-                                    <td>@item.Money</td>
+                                    <td>@(string.Format("{0:#,##0}", item.Money))</td>
                                     <td>@item.Description</td>
                                     <td>
                                         <a href="/Admin/RevenueExpenditure/Edit/@item.ID">Sửa</a>
