--- a/WebApp/Areas/Admin/Views/ViolatorKTV/Create.cshtml
+++ b/WebApp/Areas/Admin/Views/ViolatorKTV/Create.cshtml
@@ -6,24 +6,44 @@
 }
 @section header{
     Tạo mới chấm công KTV
-    }
+}
 
-@using (Html.BeginForm()) 
+@section JsFooter{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("form").bind("keypress", function (e) {
+                if (e.keyCode == 13) {
+                    return false;
+                }
+            });
+        });
+    </script>
+    <script type="text/javascript">
+
+        $(function () {
+
+            $('#Employee_ID').chosen({ width: $('.panel-collapse.collapse.in select').eq(0).width() + 'px' });
+
+        });
+    </script>
+}
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>ViolatorKTV</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Employee_ID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @*@Html.DropDownList("ProcedureID", ViewBag.CategoryID as SelectList, new { @class = "form-data" })*@
-            @Html.DropDownListFor(model => model.Employee_ID, null, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Employee_ID, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Employee_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @*@Html.DropDownList("ProcedureID", ViewBag.CategoryID as SelectList, new { @class = "form-data" })*@
+                @Html.DropDownListFor(model => model.Employee_ID, null, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Employee_ID, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
